--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Sasha Cheek | Technologist & Science Writer </title>
+  <title>Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer </title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -66,7 +66,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Sasha Cheek | Portfolio</h1>
+        <h1 class="sitename">Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer/h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -95,8 +95,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
         <h2>I am <span class="typed"
-            data-typed-items="a Systems Integration Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Systems
-            Integration Specialist</span></h2>
+            data-typed-items="a Tech Program Manager, an Integrations Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Tech Program Manager & Integrations Specialist</span></h2>
         <h3 style="opacity: 0.8;">AI * APIs * Systems Engineering * Physics * Space Science</h3>
         <div class="social-links">
           <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
@@ -107,13 +106,13 @@
 
     </section><!-- /Hero Section -->
     <!--About Section-->
-    <section id="about" class="section-black">
-      <div class="section-title">
-        <div class="container content-wrap" data-aos="fade-up">
-          <div class="section-title">
-            <h1>ABOUT</h1>
-
-          </div><!-- End Section Title -->
+      <section id="about" class="section-black">
+            <div class="section-title">
+                    <div class="container content-wrap" data-aos="fade-up">
+                              <div class="section-title">
+                                          <h1>ABOUT</h1>
+                                          
+                                                    </div><!-- End Section Title -->-->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 profile-img align-self-start">
             <div class="holo-static">
@@ -614,7 +613,7 @@
   <footer id="footer" class="footer" style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center / cover !important;
                background-size:cover;">
     <div class="container">
-      <h3 class="sitename">Sasha Cheek | Portfolio</h3>
+      <h3 class="sitename">Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer</h3>
       <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
@@ -623,7 +622,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Portfolio</strong> <span>All Rights
+          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer</strong> <span>All Rights
             Reserved</span>
         </div>
         <div class="credits">
