--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer </title>
+  <title>Sasha Cheek | Tech Program Manager & Science Writer</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -66,7 +66,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer/h1>
+        <h1 class="sitename">Sasha Cheek | Tech Program Manager & Science Writer</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -613,7 +613,7 @@
   <footer id="footer" class="footer" style="background:url('assets/img/cyberpunk-footer.jpg') no-repeat center center / cover !important;
                background-size:cover;">
     <div class="container">
-      <h3 class="sitename">Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer</h3>
+      <h3 class="sitename">Sasha Cheek | Tech Program Manager & Science Writer</h3>
       <p>Bridging the gap between systems and narrative.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
@@ -622,7 +622,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Tech Program Manager/Integrations Specialist & Science Writer</strong> <span>All Rights
+          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Tech Program Manager & Science Writer</strong> <span>All Rights
             Reserved</span>
         </div>
         <div class="credits">
