--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
         <h2>I am <span class="typed"
-            data-typed-items="a Tech Program Manager, an Integrations Specialist, a Freelance Science Writer, bridging the gap between systems and narratives">Tech Program Manager & Integrations Specialist</span></h2>
-        <h3 style="opacity: 0.8;">AI * APIs * Systems Engineering * Physics * Space Science</h3>
+            data-typed-items="a Tech Program Manager, a Science Writer, bridging the gap between systems and narrative.">Tech Program Manager & Science Writer</span></h2>
+        <h3 style="opacity: 0.8;">AI * APIs * Systems Engineering * Data * Physics * Space Science</h3>
         <div class="social-links">
           <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
           <a href="https://github.com/scheek-100/scheek-100.github.io"><i class="bi bi-github"></i></a>
