--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <!-- link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet" -->
-<link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,10 +24,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -95,7 +92,8 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h1>Sasha Cheek<br></h1>
         <h2>I am <span class="typed"
-            data-typed-items="a Tech Program Manager, a Science Writer, bridging the gap between systems and narrative.">Tech Program Manager & Science Writer</span></h2>
+            data-typed-items="a Tech Program Manager, a Science Writer, bridging the gap between systems and narrative.">Tech
+            Program Manager & Science Writer</span></h2>
         <h3 style="opacity: 0.8;">AI * APIs * Systems Engineering * Data * Physics * Space Science</h3>
         <div class="social-links">
           <a href="https://medium.com/@sashacheek100"><i class="bi bi-medium"></i></a>
@@ -105,21 +103,21 @@
       </div>
 
     </section><!-- /Hero Section -->
+    
     <!--About Section-->
-      <section id="about" class="section-black">
-            <div class="section-title">
-                    <div class="container content-wrap" data-aos="fade-up">
-                              <div class="section-title">
-                                          <h1>ABOUT</h1>
-                                          
-                                                    </div><!-- End Section Title -->-->
+    <section id="about" class="section-black">
+      <div class="section-title">
+        <div class="container content-wrap" data-aos="fade-up">
+          <div class="section-title">
+            <h1>ABOUT</h1>
+
+          </div><!-- End Section Title -->
           <div class="row gy-4 justify-content-between" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-4 profile-img align-self-start">
-            <div class="holo-static">
-              <img src="assets/img/profile-img.png"
-                class="img-fluid holo-img"alt="Sasha Cheek Hologram Portrait">
-              <div class="grain"></div>
-             </div>
+              <div class="holo-static">
+                <img src="assets/img/profile-img.png" class="img-fluid holo-img" alt="Sasha Cheek Hologram Portrait">
+                <div class="grain"></div>
+              </div>
             </div>
             <div class="col-lg-7 content">
               <h2>Sasha Cheek is a systems integration specialist and freelance science writer, with a hunger to
@@ -144,43 +142,44 @@
           organizations communicate clearly, streamline integrations, and strengthen engineering practices.</h2>
       </div><!-- End Section Title -->
 
-<div class="row justify-content-center text-center services-row">
-  <!-- Service 1 -->
-  <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-    data-aos-delay="100">
-    <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
-    <h4 class="title">Technical Consulting & Integrations</h4>
-    <p class="description">
-      <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
-        documentation and integration support.</span>
-    </p>
-  </div>
+      <div class="row justify-content-center text-center services-row">
+        <!-- Service 1 -->
+        <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          data-aos-delay="100">
+          <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
+          <h4 class="title">Technical Consulting & Integrations</h4>
+          <p class="description">
+            <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
+              documentation and integration support.</span>
+          </p>
+        </div>
 
-  <!-- Service 2 -->
-  <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-    data-aos-delay="200">
-    <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
-    <h4 class="title">Science & Technology Writing</h4>
-    <p class="description">
-      <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
-        research-driven narratives.</span>
-    </p>
-  </div>
+        <!-- Service 2 -->
+        <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          data-aos-delay="200">
+          <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
+          <h4 class="title">Science & Technology Writing</h4>
+          <p class="description">
+            <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
+              research-driven narratives.</span>
+          </p>
+        </div>
 
-  <!-- Service 3 -->
-  <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-    data-aos-delay="400">
-    <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
-    <h4 class="title">Mentorship & Advisory</h4>
-    <p class="description">
-      <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration best
-        practices.</span>
-    </p>
-  </div>
-</div>
+        <!-- Service 3 -->
+        <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+          data-aos-delay="400">
+          <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
+          <h4 class="title">Mentorship & Advisory</h4>
+          <p class="description">
+            <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration
+              best
+              practices.</span>
+          </p>
+        </div>
+      </div>
 
-  </div><!-- End container -->
-</section><!-- /Services Section -->
+      </div><!-- End container -->
+    </section><!-- /Services Section -->
 
     <!-- Resume Section -->
     <section id="resume" class="resume section-black">
@@ -234,7 +233,8 @@
                   spending partners' integrations, including configuration, testing, deployment, monitoring, and version
                   control</span></p>
               <p class="description"><span class="bullet">&bull; Recognized as trusted SME (subject matter expert) on
-                  API (application programming interface) and data feed integrations, advising cross-functional teams on best practices for scalable system
+                  API (application programming interface) and data feed integrations, advising cross-functional teams on
+                  best practices for scalable system
                   architecture and design
                   materials</span></p>
               <p class="description"><span class="bullet">&bull; Led cross-functional investigation in July 2025 to
@@ -272,7 +272,7 @@
               <p class="description"><span class="bullet">&bull; Communicated technical CDN workflows to global
                   stakeholders via automated dashboards (Power BI/Azure
                   DevOps), reducing misalignment by 30%</span></p>
-<p><em><b>Credit Karma (2021 - 2022)</b></em></p>
+              <p><em><b>Credit Karma (2021 - 2022)</b></em></p>
               <p class="description"><span class="bullet">&bull; Onboarded the highest number of partner integrations
                   during tenure while owning 7-8 concurrent projects,
                   outperforming previous TPMs within the team</span></p>
@@ -286,9 +286,12 @@
               <p><em>Hudson MX, Atlanta, GA </em></p>
               <p class="description"><span class="bullet">&bull; Led API gateway and credential management to streamline
                   secure partner integrations while shadowing DevOps SME</span></p>
-              <p class="description"><span class="bullet">&bull; Created high-impact technical docs— SOAP and RESTful APIs, ERDs (entity relationship diagrams), and test
+              <p class="description"><span class="bullet">&bull; Created high-impact technical docs— SOAP and RESTful
+                  APIs, ERDs (entity relationship diagrams), and test
                   cases— that improved onboarding and cross-team collaboration</span></p>
-              <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Warner Bros. Discovery referrals, recognized for high-impact contributions in the 2018 NCAA Digital technical product management apprenticeship program</span></p>      
+              <p class="description"><span class="bullet">&bull; Secured a startup ad-tech position via Warner Bros.
+                  Discovery referrals, recognized for high-impact contributions in the 2018 NCAA Digital technical
+                  product management apprenticeship program</span></p>
             </div>
           </div>
         </div>
@@ -301,7 +304,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h1>TECH<br>PORTFOLIO</h1>
-        <h2 class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming projects. More projects coming soon!</h2>
+        <h2 class="framed-subtitle">Applying engineering to real-world challenges, involving APIs and programming
+          projects. More projects coming soon!</h2>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -325,7 +329,7 @@
                   <a href="assets/img/portfolio/api-1.png" title="API Project 1"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
@@ -340,7 +344,7 @@
                   <a href="assets/img/portfolio/product-1.png" title="Coding Project 1"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
@@ -355,7 +359,7 @@
                   <a href="assets/img/portfolio/api-2.png" title="API Project 2"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
@@ -370,7 +374,7 @@
                   <a href="assets/img/portfolio/product-2.png" title="Coding Project 2"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
@@ -385,7 +389,7 @@
                   <a href="assets/img/portfolio/api-3.png" title="API Project 3"
                     data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                 <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
@@ -425,48 +429,51 @@
       <!-- Blog Container -->
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-    <div class="row justify-content-center">
-      <!-- ARTICLE CARD 1 -->
-      <div class="col-md-4 mb-4">
-        <div class="article-card">
-          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png" alt="David Bowie’s Ode to Sci-Fi" class="article-img">
-          <div class="article-content">
-            <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
-            <p class="article-date">Published on Medium</p>
-            <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
-              target="_blank" class="btn btn-neon">Read Article</a>
+        <div class="row justify-content-center">
+          <!-- ARTICLE CARD 1 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*wKlX15g3ACqx51mokKbSgQ.png"
+                alt="David Bowie’s Ode to Sci-Fi" class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">David Bowie’s Ode to Sci-Fi and Space Science</h4>
+                <p class="article-date">Published on Medium</p>
+                <a href="https://medium.com/@sashacheek100/david-bowies-ode-to-sci-fi-and-space-science-5bbd5e5f6546"
+                  target="_blank" class="btn btn-neon">Read Article</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <!-- ARTICLE CARD 2 -->
-      <div class="col-md-4 mb-4">
-        <div class="article-card">
-          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN" alt="Automated Love" class="article-img">
-          <div class="article-content">
-            <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
-            <p class="article-date">Published on Medium</p>
-            <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
-              target="_blank" class="btn btn-neon">Read Article</a>
+          <!-- ARTICLE CARD 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*Tv3QfLov-HJwoiiN" alt="Automated Love"
+                class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Automated Love: How AI Became the New Face of Romance</h4>
+                <p class="article-date">Published on Medium</p>
+                <a href="https://medium.com/@sashacheek100/automated-love-how-ai-became-the-new-face-of-romance-900d9d59a079"
+                  target="_blank" class="btn btn-neon">Read Article</a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
 
-      <!-- ARTICLE CARD 3 -->
-      <div class="col-md-4 mb-4">
-        <div class="article-card">
-          <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz" alt="Dealing with Alzheimer’s" class="article-img">
-          <div class="article-content">
-            <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
-            <p class="article-date">Published on Medium</p>
-            <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
-              target="_blank" class="btn btn-neon">Read Article</a>
+          <!-- ARTICLE CARD 3 -->
+          <div class="col-md-4 mb-4">
+            <div class="article-card">
+              <img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*x2mm18W8-WYL6Ahz"
+                alt="Dealing with Alzheimer’s" class="article-img">
+              <div class="article-content">
+                <h4 class="article-title">Dealing with Early Signs of Alzheimer’s Disease in Loved Ones</h4>
+                <p class="article-date">Published on Medium</p>
+                <a href="https://medium.com/@sashacheek100/dealing-with-early-signs-of-alzheimers-disease-in-loved-ones-f40c4a5481f7"
+                  target="_blank" class="btn btn-neon">Read Article</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
+    </section>
     <!-- End Writing Section -->
 
     <!-- Testimonials Section -->
@@ -622,7 +629,8 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Tech Program Manager & Science Writer</strong> <span>All Rights
+          <span>Copyright</span> <strong class="px-1 sitename">Sasha Cheek | Tech Program Manager & Science
+            Writer</strong> <span>All Rights
             Reserved</span>
         </div>
         <div class="credits">
