--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Sasha Cheek | Tech Program Manager & Science Writer</title>
+  <title>Sasha Cheek | Tech Program Manager<br>& Science Writer</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -74,6 +74,7 @@
           <li><a href="#resume">RESUME</a></li>
           <li><a href="#portfolio">TECH PORTFOLIO</a></li>
           <li><a href="#writing">WRITING</a></li>
+          <li><a href="testimonials">TESTIMONIALS</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
