--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <!-- Services Section -->
     <section id="services" class="services section-black">
-
+      <div class="container">
       <!-- Section Title -->
       <div class="section-title" data-aos="fade-up">
         <h1>SERVICES</h1>
@@ -173,11 +173,8 @@
           <p class="description">
             <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration
               best
-              practices.</span>
-          </p>
+              practices.</span></p>
         </div>
-      </div>
-
       </div><!-- End container -->
     </section><!-- /Services Section -->
 
