--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
 
     </section><!-- /Hero Section -->
-    
+
     <!--About Section-->
     <section id="about" class="section-black">
       <div class="section-title">
@@ -135,47 +135,49 @@
     <!-- Services Section -->
     <section id="services" class="services section-black">
       <div class="container">
-      <!-- Section Title -->
-      <div class="section-title" data-aos="fade-up">
-        <h1>SERVICES</h1>
-        <h2 class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
-          organizations communicate clearly, streamline integrations, and strengthen engineering practices.</h2>
-      </div><!-- End Section Title -->
+        <!-- Section Title -->
+        <div class="section-title" data-aos="fade-up">
+          <h1>SERVICES</h1>
+          <h2 class="framed-subtitle">I provide technical consulting, science/technology writing, and mentorship to help
+            organizations communicate clearly, streamline integrations, and strengthen engineering practices.</h2>
+        </div><!-- End Section Title -->
 
-      <div class="row justify-content-center text-center services-row">
-        <!-- Service 1 -->
-        <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-          data-aos-delay="100">
-          <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
-          <h4 class="title">Technical Consulting & Integrations</h4>
-          <p class="description">
-            <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
-              documentation and integration support.</span>
-          </p>
-        </div>
+        <div class="row justify-content-center text-center services-row">
+          <!-- Service 1 -->
+          <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="100">
+            <div class="icon cyber-icon"><i class="bi bi-lightbulb-fill"></i></div>
+            <h4 class="title">Technical Consulting & Integrations</h4>
+            <p class="description">
+              <span class="bullet">&bull; Streamline API architecture, systems engineering, and data feeds through clear
+                documentation and integration support.</span>
+            </p>
+          </div>
 
-        <!-- Service 2 -->
-        <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-          data-aos-delay="200">
-          <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
-          <h4 class="title">Science & Technology Writing</h4>
-          <p class="description">
-            <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
-              research-driven narratives.</span>
-          </p>
-        </div>
+          <!-- Service 2 -->
+          <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="200">
+            <div class="icon cyber-icon"><i class="bi bi-vector-pen"></i></div>
+            <h4 class="title">Science & Technology Writing</h4>
+            <p class="description">
+              <span class="bullet">&bull; Translate complex technical and scientific concepts into engaging,
+                research-driven narratives.</span>
+            </p>
+          </div>
 
-        <!-- Service 3 -->
-        <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
-          data-aos-delay="400">
-          <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
-          <h4 class="title">Mentorship & Advisory</h4>
-          <p class="description">
-            <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and integration
-              best
-              practices.</span></p>
-        </div>
-      </div><!-- End container -->
+          <!-- Service 3 -->
+          <div class="col-md-4 col-sm-12 service-item d-flex flex-column align-items-center" data-aos="fade-up"
+            data-aos-delay="400">
+            <div class="icon cyber-icon"><i class="bi bi-person-arms-up"></i></div>
+            <h4 class="title">Mentorship & Advisory</h4>
+            <p class="description">
+              <span class="bullet">&bull; Provide guidance on technical career paths, resume development, and
+                integration
+                best
+                practices.</span>
+            </p>
+          </div>
+        </div><!-- End container -->
     </section><!-- /Services Section -->
 
     <!-- Resume Section -->
@@ -475,16 +477,17 @@
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section-black">
+      <div class="container">
 
-      <!-- Section Title -->
-      <div class="section-title" data-aos="fade-up">
-        <h1>TESTIMONIALS</h1>
-        <h2 class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</h2>
-      </div><!-- End Section Title -->
-      
-      <div data-aos="fade-up" data-aos-delay="100">
-        <div class="swiper init-swiper">
-          <script type="application/json" class="swiper-config">
+        <!-- Section Title  -->
+        <div class="section-title" data-aos="fade-up">
+          <h1>TESTIMONIALS</h1>
+          <h2 class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</h2>
+        </div><!-- End Section Title -->
+
+        <div data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper init-swiper">
+            <script type="application/json" class="swiper-config">
             {
               "loop": true,
               "speed": 600,
@@ -500,58 +503,62 @@
             }
           </script>
 
-          <div class="swiper-wrapper">
+            <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img
-                  src="https://media.licdn.com/dms/image/v2/D5603AQEibYrTk8suiA/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1687087039525?e=1761782400&v=beta&t=MG7kjd4nd9Lk5s_lKX1opAb8gAUUS6P1s6HmVxCU7ao"
-                  class="testimonial-img" alt="">
-                <h3>Daniel M. Chin, PMP</h3>
-                <h4>Program Manager at Microsoft</h4>
-                <!--Cyber Barcode Divider -->
-                <div class="cyber-barcode"></div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I worked with Sasha on the Microsoft e-commerce program migration project. She successfully
-                    managed complicated program tasks with a detail oriented project management skill-set while
-                    employing creativity. Thanks to her clear communication with cross functional teams, we could
-                    efficiently use our time. She is a very knowledgeable and hardworking collaborator. She’s also a
-                    very friendly and warm hearted person. I strongly recommend her for any program manager
-                    position.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
+              <!-- Testiomonial 1-->
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img
+                    src="https://media.licdn.com/dms/image/v2/D5603AQEibYrTk8suiA/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1687087039525?e=1761782400&v=beta&t=MG7kjd4nd9Lk5s_lKX1opAb8gAUUS6P1s6HmVxCU7ao"
+                    class="testimonial-img" alt="">
+                  <h3>Daniel M. Chin, PMP</h3>
+                  <h4>Program Manager at Microsoft</h4>
+                  <!--Cyber Barcode Divider -->
+                  <div class="cyber-barcode"></div>
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    <span>I worked with Sasha on the Microsoft e-commerce program migration project. She successfully
+                      managed complicated program tasks with a detail oriented project management skill-set while
+                      employing creativity. Thanks to her clear communication with cross functional teams, we could
+                      efficiently use our time. She is a very knowledgeable and hardworking collaborator. She’s also a
+                      very friendly and warm hearted person. I strongly recommend her for any program manager
+                      position.</span>
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
               </div>
-            </div><!-- End testimonial item -->
 
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img
-                  src="https://media.licdn.com/dms/image/v2/D5603AQEoS37JgAcEKw/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1731534579150?e=1761782400&v=beta&t=XOFElMatfSz274LVnHA3fx1YvVkVCEBuJm8IldSTupo"
-                  class="testimonial-img" alt="">
-                <h3>Susan Walker</h3>
-                <h4>Scrum Master at Abercrombie &amp; Fitch</h4>
-                <!--Cyber Barcode Divider -->
-                <div class="cyber-barcode"></div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>I had the pleasure of working with Sasha as a fellow Technical Program Manager. From the moment
-                    I met her during my first day at Credit Karma I liked her and knew she would be someone I could
-                    learn from. She is knowledgeable and passionate about coaching teams to be their very best. She has
-                    a positive attitude and is always willing to help whenever needed. She is also not afraid to ask the
-                    hard questions and point out areas where we can all improve. She is a humble leader who always has
-                    the best in mind of everyone she works with.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
+              <!-- Testimonial 2 -->
+              <div class="swiper-slide">
+                <div class="testimonial-item">
+                  <img
+                    src="https://media.licdn.com/dms/image/v2/D5603AQEoS37JgAcEKw/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1731534579150?e=1761782400&v=beta&t=XOFElMatfSz274LVnHA3fx1YvVkVCEBuJm8IldSTupo"
+                    class="testimonial-img" alt="">
+                  <h3>Susan Walker</h3>
+                  <h4>Scrum Master at Abercrombie &amp; Fitch</h4>
+                  <!--Cyber Barcode Divider -->
+                  <div class="cyber-barcode"></div>
+                  <p>
+                    <i class="bi bi-quote quote-icon-left"></i>
+                    <span>I had the pleasure of working with Sasha as a fellow Technical Program Manager. From the
+                      moment
+                      I met her during my first day at Credit Karma I liked her and knew she would be someone I could
+                      learn from. She is knowledgeable and passionate about coaching teams to be their very best. She
+                      has
+                      a positive attitude and is always willing to help whenever needed. She is also not afraid to ask
+                      the
+                      hard questions and point out areas where we can all improve. She is a humble leader who always has
+                      the best in mind of everyone she works with.</span>
+                    <i class="bi bi-quote quote-icon-right"></i>
+                  </p>
+                </div>
               </div>
-            </div><!-- End testimonial item -->
+            </div><!-- End swiper-wrapper -->
 
-          </div><!-- End swiper-wrapper -->
-
-          <div class="swiper-pagination"></div>
-        </div><!-- End swiper -->
+            <div class="swiper-pagination"></div>
+          </div><!-- End swiper -->
+        </div><!-- End data-aos -->
       </div><!-- End data-aos -->
-
     </section><!-- /Testimonials Section -->
 
     <!-- Contact Section -->
