--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
     </section><!-- /About Section -->
 
     <!-- Services Section -->
-    <section id="services" class="services section-black">
+    <section id="services" class="services section dark-background" style="background:url('assets/img/Nick_Fancher_Unplash_Cyberbunk2077.png') no-repeat center center / cover !important;
+                   background-size:cover;" alt="" data-aos="fade-in">
+
       <div class="container">
         <!-- Section Title -->
         <div class="section-title" data-aos="fade-up">
