--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Sasha Cheek | Tech Program Manager<br> & Science Writer</title>
+  <title>Sasha Cheek | Tech Program Manager &amp; Science Writer</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -63,7 +63,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Sasha Cheek | Tech Program Manager & Science Writer</h1>
+        <h1 class="sitename">Sasha Cheek | Tech Program Manager<br> &amp; Science Writer</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
