Testimonials and Tech Portfolio Updates (CSS/HTML) - 10.10.25

--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
     <!-- /Resume Section -->
 
     <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section-black">
+    <section id="portfolio" class="portfolio dark-background" style="background:url('assets/img/technology_particle_background.jpg') no-repeat center center / cover !important;
+                       background-size:cover;" alt="" data-aos="fade-in">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -478,7 +479,8 @@
     <!-- End Writing Section -->
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials section-black">
+    <section id="testimonials" class="testimonials dark-background" style="background:url('assets/img/testimonials-geometric-background.jpg') no-repeat center center / cover !important;
+                           background-size:cover;" alt="" data-aos="fade-in">
       <div class="container">
 
         <!-- Section Title  -->
@@ -487,7 +489,8 @@
           <h2 class="framed-subtitle">Results recognized by former colleagues, coworkers, and clients.</h2>
         </div><!-- End Section Title -->
 
-        <div data-aos="fade-up" data-aos-delay="100">
+        <!--Glassy Wrapper Overlay-->
+        <div class="testimonial-glass" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper init-swiper">
             <script type="application/json" class="swiper-config">
             {
@@ -559,7 +562,7 @@
 
             <div class="swiper-pagination"></div>
           </div><!-- End swiper -->
-        </div><!-- End data-aos -->
+        </div><!-- End testimonial-glass -->
       </div><!-- End data-aos -->
     </section><!-- /Testimonials Section -->
 
