--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+          <ul class="portfolio-filters isotope-filters" data-aos="fade-up">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-apis">APIs</li>
             <li data-filter=".filter-coding">Coding</li>
