--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
           projects. More projects coming soon!</h2>
       </div><!-- End Section Title -->
 
+      <!-- Portfolio Container -->
       <div class="container">
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
@@ -321,103 +322,38 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
+            
+            <!-- Portfolio Item 1 -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/api-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>API Project 1</h4>
-                  <p>Project coming soon..</p>
+                  <p>Project coming soon...</p>
                   <a href="assets/img/portfolio/api-1.png" title="API Project 1"
-                    data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
+                    data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-
+            
+            <!-- Portfolio Item 2 -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
               <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/product-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Coding Project 1</h4>
-                  <p>Project coming soon..</p>
+                  <p>Project coming soon...</p>
                   <a href="assets/img/portfolio/product-1.png" title="Coding Project 1"
                     data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/api-2.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>API Project 2</h4>
-                  <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/api-2.png" title="API Project 2"
-                    data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
-                      class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-2.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Coding Project 2</h4>
-                  <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/product-2.png" title="Coding Project 2"
-                    data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
-                      class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-apis">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/api-3.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>API Project 3</h4>
-                  <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/api-3.png" title="API Project 3"
-                    data-gallery="portfolio-gallery-writing" class="glightbox preview-link"><i
-                      class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-coding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.png" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4>Coding Project 3</h4>
-                  <p>Project coming soon..</p>
-                  <a href="assets/img/portfolio/product-3.png" title="Coding Project 3"
-                    data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i
-                      class="bi bi-zoom-in"></i></a>
-                  <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a> -->
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
-
         </div>
-
       </div>
-
     </section><!-- /Portfolio Section -->
 
     <!-- Writing Section -->
